# Heat-Simulation

./: CMakeLists.txt  Dependencies.txt  HeatSim.cpp  HeatSim.h  Makefile  Parameters.h  Pressure.txt  README.md  RenderUtils.cpp  RenderUtils.h  Resources.h  SimAlgos.cpp  SimAlgos.h  SimUtils.cpp  SimUtils.h  TransparencyViewer.cpp  TransparencyViewer.h
Polycode/: BUILD.md
Polycode/CMake/: ExternalAssimp.cmake  ExternalBox2D.cmake  ExternalBullet.cmake  ExternalFreetype.cmake  ExternalGLExt.cmake  ExternalLibArchive.cmake  ExternalLua51.cmake  ExternalOggVorbis.cmake  ExternalOpenAL.cmake  ExternalPNG.cmake  ExternalPhysFS.cmake  ExternalWGLExt.cmake  FindAssimp.cmake  FindFreenect.cmake  FindLibArchive.cmake  FindVorbisFile.cmake  PolycodeIncludes.cmake  lua51.cmake
Polycode/Core/Contents/Source/: PolyCore.cpp  PolyGLSLShaderModule.cpp
Polycode/Dependencies/: CMakeLists.txt
Polycode/Modules/Contents/GLSL/Source/: PolyGLSLShaderModule.cpp
